fix(footer): adjust image overflow

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -42,7 +42,7 @@
 
 .floatingImage {
   position: relative;
-  bottom: 65px;
+  bottom: 62px;
   width: 50%;
 }
 
